# kimi-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml
.github/workflows/: ci-docs.yml  ci-kagent.yml  ci-kimi-cli.yml  ci-kimi-sdk.yml  ci-kosong.yml  ci-pykaos.yml  docs-pages.yml  release-kimi-cli.yml  sync-upstream.yml
docs/: AGENTS.md  index.md
docs/.vitepress/: config.ts
docs/en/: faq.md  index.md
docs/zh/: faq.md  index.md
examples/custom-kimi-soul/: main.py
examples/kimi-psql/: main.py
examples/sample-plugin/: SKILL.md  plugin.json
klips/: klip-15-kagent-sidecar-integration.md
rust/: .pre-commit-config.yaml  AGENTS.md  Cargo.toml
rust/_/: PLAN.md  PROMPT.md
rust/kagent/: Cargo.toml
rust/kagent/src/: agentspec.rs  app.rs  config.rs  constant.rs  exception.rs  lib.rs  llm.rs  main.rs  mcp.rs  metadata.rs  session.rs  share.rs
rust/kagent/src/cli/: AGENTS.md  info.rs  mcp.rs  mod.rs
rust/kagent/src/prompts/: mod.rs
rust/kagent/src/skill/: AGENTS.md  mod.rs
rust/kagent/src/skill/flow/: d2.rs  mermaid.rs  mod.rs
rust/kagent/src/soul/: AGENTS.md  agent.rs  approval.rs  compaction.rs  context.rs  denwarenji.rs  kimisoul.rs  message.rs  mod.rs  toolset.rs
rust/kagent/src/tools/: AGENTS.md  dmail.rs  mod.rs  shell.rs  test.rs  think.rs  todo.rs  utils.rs
rust/kagent/src/tools/file/: glob.rs  grep.rs  mod.rs  read.rs  read_media.rs  replace.rs  write.rs
rust/kagent/src/tools/multiagent/: create.rs  mod.rs  task.rs
rust/kagent/src/tools/web/: fetch.rs  mod.rs  search.rs
rust/kagent/src/utils/: aioqueue.rs  broadcast.rs  diff.rs  environment.rs  frontmatter.rs  logging.rs  media_tags.rs  message.rs  mod.rs  path.rs  slashcmd.rs  string.rs
rust/kagent/src/wire/: AGENTS.md  channel.rs  file.rs  jsonrpc.rs  mod.rs  protocol.rs  serde.rs  server.rs  types.rs
rust/kagent/tests/: agent_flow.rs  agent_spec.rs  broadcast_queue.rs  config.rs  create_llm.rs  default_agent.rs  diff_utils.rs  environment.rs  exceptions.rs  frontmatter.rs  kimisoul_ralph_loop.rs  kimisoul_slash_commands.rs  list_directory.rs  load_agent.rs  load_agents_md.rs  message_utils.rs  path_utils.rs  result_builder.rs  session.rs  skill.rs  slash_command.rs  soul_message.rs  tool_create_subagent.rs  tool_descriptions.rs  tool_fetch_url.rs  tool_glob.rs  tool_grep.rs  tool_read_file.rs  tool_read_media_desc.rs  tool_read_media_file.rs  tool_schemas.rs  tool_str_replace_file.rs  tool_test_utils.rs  tool_write_file.rs  wire_message.rs
rust/kaos/: Cargo.toml
rust/kaos/src/: AGENTS.md  current.rs  lib.rs  local.rs  path.rs
rust/kosong/: Cargo.toml
rust/kosong/src/: AGENTS.md  generate.rs  lib.rs  message.rs
rust/kosong/src/chat_provider/: kimi.rs  mod.rs
rust/kosong/src/chat_provider/echo/: dsl.rs  echo.rs  mod.rs  scripted_echo.rs
rust/kosong/src/tooling/: empty.rs  error.rs  mcp.rs  mod.rs  simple.rs
rust/kosong/src/utils/: jsonschema.rs  mod.rs  typing.rs
rust/kosong/tests/: message.rs
scripts/: build_vis.py  build_web.py  check_cargo_version_tag.py  check_version_tag.py  cleanup_tmp_sessions.py
src/kimi_cli/: __init__.py  __main__.py  agentspec.py  app.py  config.py  constant.py  exception.py  llm.py  mcp_oauth.py  metadata.py  session.py  session_fork.py  session_state.py  share.py
tests/: conftest.py  test_additional_dirs_state.py  test_attachment_cache.py  test_clipboard.py  test_file_utils.py  test_git_context.py
tests/acp/: conftest.py  test_protocol_v1.py  test_server_initialize.py  test_session_notifications.py  test_version.py
tests/auth/: test_ascii_header.py  test_oauth_cross_process.py  test_oauth_refresh.py  test_platforms.py  test_resolve_api_key.py
tests/background/: test_agent_timeout.py  test_ids.py  test_manager.py  test_models.py  test_store.py  test_worker.py
tests/cli/: test_mcp_oauth.py
tests/core/: test_afk_injection.py  test_agent_cutover.py  test_agent_spec.py  test_approval_runtime.py  test_ask_user_plan_mode.py  test_auth_error_handling.py  (+56 more)
tests_e2e/: AGENTS.md  test_mcp_cli.py  test_wire_approvals_tools.py  test_wire_auth.py  test_wire_config.py  test_wire_prompt.py  test_wire_protocol.py  test_wire_question.py  test_wire_sessions.py  test_wire_skills_mcp.py  test_wire_steer.py  wire_helpers.py
vis/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/: .gitignore  index.html  openapi.json  package-lock.json  package.json
(+456 files in other folders)
