[workspace]
members = ["kaos", "kosong", "kagent"]
resolver = "2"

[workspace.package]
version = "1.8.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
async-stream = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "io-std", "process"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
jsonschema = "0.40"
schemars = { version = "1.2", features = ["derive"] }
walkdir = "2"
globset = "0.4"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
md5 = "0.8"
percent-encoding = "2"
url = "2"
dirs = "6"
glob = "0.3"
tar = "0.4"
flate2 = "1"
zip = "7"
sysinfo = "0.38"
rand = "0.9"
similar = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
rustc_version_runtime = "0.3"
scraper = "0.25"
html2md = "0.2"
rmcp = { version = "0.14", features = ["auth", "client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
webbrowser = "1.0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
