[package]
name = "kagent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kagent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
chrono.workspace = true
regex.workspace = true
uuid.workspace = true
clap.workspace = true
futures.workspace = true
async-stream.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
base64.workspace = true
url.workspace = true
globset.workspace = true
jsonschema.workspace = true
schemars.workspace = true
async-trait.workspace = true
dirs.workspace = true
md5.workspace = true
sysinfo.workspace = true
rand.workspace = true
similar.workspace = true
image.workspace = true
rustc_version_runtime.workspace = true
scraper.workspace = true
html2md.workspace = true
rmcp.workspace = true
webbrowser.workspace = true
tar.workspace = true
flate2.workspace = true
zip.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tempfile = "3"

kaos = { path = "../kaos" }
kosong = { path = "../kosong" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
wiremock = "0.6"
filetime = "0.2"
axum = "0.8"
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
