[package]
name = "kaos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
dirs.workspace = true
globset.workspace = true
glob.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
